# CricGyan

./: .gitignore  .vercelignore  DEPLOY.md  GETTING_STARTED.md  IMPROVEMENTS.md  README.md  package-lock.json  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements-ui.txt  requirements-vercel.txt  requirements.txt  run_from_kaggle.py  vercel.json
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml.example
api/: __init__.py  index.py  inference.py  main.py
backend/: __init__.py  inference.py  inference_lite.py  main.py
dashboard/: app.py
data/: kaggle_ipl.py  loader.py
evaluation/: evaluate.py
models/: feature_constants.py  inference_export.py  pre_match_features.py  pressure_index.py  toss_alpha_decay.py  unified_predictor.py
models/saved/: collapse_cal.pkl  collapse_model.pkl  lgb_in.pkl  lgb_pre.pkl  meta.pkl  pre_calibrator.pkl  team_stats.pkl  toss_alpha.pkl
notebooks/: full_pipeline.ipynb
public/: index.html
public/static/: styles.css
static/: app.js
