[project]
name = "cricgyan"
version = "0.1.0"
description = "IPL Intelligence Engine — ML pipeline and CricGyaan API"
readme = "README.md"
# Keep compatible with `.python-version` (3.11) and runtime.txt. Do not use `==3.12.*` only.
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false
