[project]
name = "cricgyan"
version = "0.1.0"
description = "IPL Intelligence Engine — ML pipeline and CricGyaan API"
readme = "README.md"
# Vercel installs vercel-runtime (>=0.11) which requires Python >=3.12; keep .python-version in sync.
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false
